Fix for the dark mode

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
-html {
-    height: 100%;
+html, body, .pagina {
+    min-height: 100vh;
     overflow: scroll;
     scrollbar-width: none;
     background-color: var(--background-color3);
@@ -88,13 +88,9 @@ body {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.pagina {
-    background-color: var(--background-color3);
-    height: 100%;
-}
+
 header {
-    padding: 1rem;
-        
+    padding: 1rem;   
 }
 .header ul {
     background-color: var(--background-color3);
